fix intra-page permalink nav. (no more overlapping header)

--- a/lighthouse-core/report/v2/report-styles.css
+++ b/lighthouse-core/report/v2/report-styles.css
@@ -741,6 +741,16 @@ span.lh-node:hover {
   border-top: 1px solid var(--report-border-color);
 }
 
+/* section hash link jump should preserve fixed header
+   https://css-tricks.com/hash-tag-links-padding/
+*/
+.lh-category > .lh-permalink {
+  margin-top: calc((var(--report-header-height) + var(--default-padding)) * -1);
+  padding-bottom: calc(var(--report-header-height) + var(--default-padding));
+  display: block;
+  visibility: hidden;
+}
+
 .lh-category:first-of-type {
   border: none;
 }
